# harnessgym

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-docs.yml  publish.yml
docs/: CNAME  cli.md  getting-started.md  how-it-works.md  index.md  install.md  philosophy.md  results.md
docs/assets/: extra.css
docs/concepts/: activation.md  artifacts.md  compare.md  qualification.md  telemetry.md
docs/examples/: index.md
docs/experiments/: claude-code-runner-2026-05-20.md  claude-mcp-tool-telemetry-2026-05-23.md  cpu-moe-real-smoke-2026-05-24.md  cpu-moe-real-smoke.md  h100-triton-rmsnorm-2026-05-26.md  h100-triton-rmsnorm-long-2026-05-27.md  h100-triton-rmsnorm-long.md  h100-triton-rmsnorm.md  index.md  tensor-layout-qualification-2026-05-19.md  tensor-layout-qualification.md
docs/runners/: claude.md  codex.md  fake.md  index.md
examples/c_flash_attention_optimization_task/: benchmark.c  benchmark.py  kernel.c  kernel.h  task.md
examples/cpp_stencil_kernel_task/: benchmark.py  kernel.cpp  kernel.h  task.md  verifier.py
examples/cpu_moe_kernel_task/: task.md  (+5 more)
tests/: test_activation.py  test_artifacts.py  test_claude_mcp_bridge.py  test_claude_runner.py  test_compare.py  test_config.py  test_cpp_stencil_example.py  test_exec_runner.py  test_fake_e2e.py  test_mcp_client.py  test_mcp_telemetry_proxy.py  test_post_attempt.py  test_postprocess.py  test_prompts.py  test_qualification.py  test_registry.py  test_scores.py  test_task_state.py  test_tensor_layout_example.py  test_timeouts.py  test_triton_h100_example.py
(+68 files in other folders)
